--- a/Module3coding/CSS/css/styles.css
+++ b/Module3coding/CSS/css/styles.css
@@ -71,7 +71,7 @@ h2 {
 
 p {
 margin: 0;
-padding: 5px;
+padding: 8px;
 font-family: Helvetica;
 font-size: 0.9em;
 }
@@ -89,8 +89,34 @@ font-size: 0.9em;
   background-color: pink;
   font-family: Verdana;
   font-weight: bold;
-  padding: 10px; 
+  padding: 7px; 
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+
+#Sushi {
+  background-color: pink;
+  font-family: Verdana;
+  font-weight: bold;
+  padding: 7px; 
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#Vegetables {
+  background-color: pink;
+  font-family: Verdana;
+  font-weight: bold;
+  padding: 7px; 
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#p1 {
+  margin-bottom: 25px;
 }
 
 section {
